# wmcv-log

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: CMakeLists.txt
include/wmcv_log/: wmcv_format.h  wmcv_log.h  wmcv_log_sink.h  wmcv_log_system.h
include/wmcv_log/sinks/: wmcv_sink_outputdbgstring.h
src/: CMakeLists.txt  pch.h  wmcv_format.cpp  wmcv_log_system.cpp  wmcv_sink_outputdbgstring.cpp
test/: CMakeLists.txt  test_pch.h  test_wmcv_format.cpp  test_wmcv_log.cpp
